--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.hibernate.ddl-auto= update
 spring.jpa.database = mysql
 spring.datasource.url=jdbc:mysql://localhost/db_starwars?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSl=false
 spring.datasource.username=root
-spring.datasource.password=Clau2305
+spring.datasource.password=2130trum
 
 spring.jpa.show-sql=true
 
