--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,22 @@
-spring.jpa.hibernate.ddl-auto= update
-spring.jpa.database = mysql
-spring.datasource.url=jdbc:mysql://localhost/db_starwars?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSl=false
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto= update
+#spring.jpa.database = mysql
+#spring.datasource.url=jdbc:mysql://localhost/db_starwars?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSl=false
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+#spring.jpa.show-sql=true
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+#spring.jackson.time-zone= Brazil/East
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 spring.jpa.show-sql=true
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-spring.jackson.time-zone= Brazil/East
+spring.jpa.properties.hibernate.format_sql=true
